test/corpus/expressions.txt
==========================
Anonymous function
==========================

$f1 = function($p1) {};

$f2 = function($p1, $p2): int {};

---

(script
  (expression_statement
    (binary_expression
      left: (variable)
      right: (anonymous_function_expression
        (parameters
          (parameter
            name: (variable)))
        body: (compound_statement))))
  (expression_statement
    (binary_expression
      left: (variable)
      right: (anonymous_function_expression
        (parameters
          (parameter
            name: (variable))
          (parameter
            name: (variable)))
        return_type: (type_specifier)
        body: (compound_statement)))))

==========================
Anonymous function type
==========================

function((function(int...): int) $function): ((function(int): int), (function(): void)) use ($function)  {};

---

(script
  (expression_statement
    (anonymous_function_expression
      (parameters
        (parameter
          type: (function_type_specifier
            (type_specifier)
            (variadic_modifier)
            return_type: (type_specifier))
          name: (variable)))
      return_type: (tuple_type_specifier
        (function_type_specifier
          (type_specifier)
          return_type: (type_specifier))
        (function_type_specifier
          return_type: (type_specifier)))
      (use_clause
        (variable))
      body: (compound_statement))))

==========================
Anonymous function use
==========================

$f3 = function($p1) use ($p2,) {};

$f4 = function($p1): int use ($p2, $p3) {};

---

(script
  (expression_statement
    (binary_expression
      left: (variable)
      right: (anonymous_function_expression
        (parameters
          (parameter
            name: (variable)))
        (use_clause
          (variable))
        body: (compound_statement))))
  (expression_statement
    (binary_expression
      left: (variable)
      right: (anonymous_function_expression
        (parameters
          (parameter
            name: (variable)))
        return_type: (type_specifier)
        (use_clause
          (variable)
          (variable))
        body: (compound_statement)))))

==========================
Anonymous function with capabilities
==========================

function()[C]: void {};

---

(script
  (expression_statement
    (anonymous_function_expression
      (parameters)
      (capability_list
        (capability
          (identifier)))
      (type_specifier)
      (compound_statement))))

==========================
As
==========================

$var as int;
$var ?as int;

---

(script
  (expression_statement
    (as_expression
      left: (variable)
      right: (type_specifier)))
  (expression_statement
    (as_expression
      left: (variable)
      right: (type_specifier))))

==========================
Assignment
==========================

$var = 1;
$var[] = 1;
$var[1] = 1;
$var['key'] = 1;
$var[$var['key']] = 1;
$var[$var['key']][] = 1;
$var[][$var['key']] = 1;

list($var, $bar) = tuple(1, 1);
list($var[], $bar) = tuple(1, 1);
list($var[1], $bar[]) = tuple(1, 1);
list($var['key'], $bar[1]) = tuple(1, 1);
list($var[$var['key']], $bar['key']) = tuple(1, 1);
list($var[$var['key']][], $var[$var['key']],) = tuple(1, 1);

---

(script
  (expression_statement
    (binary_expression
      left: (variable)
      right: (integer)))
  (expression_statement
    (binary_expression
      left: (subscript_expression
        (variable))
      right: (integer)))
  (expression_statement
    (binary_expression
      left: (subscript_expression
        (variable)
        (integer))
      right: (integer)))
  (expression_statement
    (binary_expression
      left: (subscript_expression
        (variable)
        (string))
      right: (integer)))
  (expression_statement
    (binary_expression
      left: (subscript_expression
        (variable)
        (subscript_expression
          (variable)
          (string)))
      right: (integer)))
  (expression_statement
    (binary_expression
      left: (subscript_expression
        (subscript_expression
          (variable)
          (subscript_expression
            (variable)
            (string))))
      right: (integer)))
  (expression_statement
    (binary_expression
      left: (subscript_expression
        (subscript_expression
          (variable))
        (subscript_expression
          (variable)
          (string)))
      right: (integer)))
  (expression_statement
    (binary_expression
      left: (list_expression
        (variable)
        (variable))
      right: (tuple
        (integer)
        (integer))))
  (expression_statement
    (binary_expression
      left: (list_expression
        (subscript_expression
          (variable))
        (variable))
      right: (tuple
        (integer)
        (integer))))
  (expression_statement
    (binary_expression
      left: (list_expression
        (subscript_expression
          (variable)
          (integer))
        (subscript_expression
          (variable)))
      right: (tuple
        (integer)
        (integer))))
  (expression_statement
    (binary_expression
      left: (list_expression
        (subscript_expression
          (variable)
          (string))
        (subscript_expression
          (variable)
          (integer)))
      right: (tuple
        (integer)
        (integer))))
  (expression_statement
    (binary_expression
      left: (list_expression
        (subscript_expression
          (variable)
          (subscript_expression
            (variable)
            (string)))
        (subscript_expression
          (variable)
          (string)))
      right: (tuple
        (integer)
        (integer))))
  (expression_statement
    (binary_expression
      left: (list_expression
        (subscript_expression
          (subscript_expression
            (variable)
            (subscript_expression
              (variable)
              (string))))
        (subscript_expression
          (variable)
          (subscript_expression
            (variable)
            (string))))
      right: (tuple
        (integer)
        (integer)))))

==========================
Async
==========================

async {
};

async {
  concurrent {
    await func1();
    await func2();
  }
};

---

(script
  (expression_statement
    (awaitable_expression
      (compound_statement)))
  (expression_statement
    (awaitable_expression
      (compound_statement
        (concurrent_statement
          (compound_statement
            (expression_statement
              (prefix_unary_expression
                operand: (call_expression
                  function: (qualified_identifier
                    (identifier))
                  (arguments))))
            (expression_statement
              (prefix_unary_expression
                operand: (call_expression
                  function: (qualified_identifier
                    (identifier))
                  (arguments))))))))))

==========================
Augmented assignment
==========================

$var ??= 1;
$var[] .= 'stringgg';
$var[1] |= 1;
$var['key'] ^= 1;
$var[$var['key']] &= 1;
$var[$var['key']][] <<= 1;
$var[][$var['key']] >>= 1;

list($var, $bar) += tuple(1, 1);
list($var[], $bar) -= tuple(1, 1);
list($var[1], $bar[]) *= tuple(1, 1);
list($var['key'], $bar[1]) /= tuple(1, 1);
list($var[$var['key']], $bar['key']) %= tuple(1, 1);
list($var[$var['key']][], $var[$var['key']],) **= tuple(1, 1);

---

(script
  (expression_statement
    (binary_expression
      left: (variable)
      right: (integer)))
  (expression_statement
    (binary_expression
      left: (subscript_expression
        (variable))
      right: (string)))
  (expression_statement
    (binary_expression
      left: (subscript_expression
        (variable)
        (integer))
      right: (integer)))
  (expression_statement
    (binary_expression
      left: (subscript_expression
        (variable)
        (string))
      right: (integer)))
  (expression_statement
    (binary_expression
      left: (subscript_expression
        (variable)
        (subscript_expression
          (variable)
          (string)))
      right: (integer)))
  (expression_statement
    (binary_expression
      left: (subscript_expression
        (subscript_expression
          (variable)
          (subscript_expression
            (variable)
            (string))))
      right: (integer)))
  (expression_statement
    (binary_expression
      left: (subscript_expression
        (subscript_expression
          (variable))
        (subscript_expression
          (variable)
          (string)))
      right: (integer)))
  (expression_statement
    (binary_expression
      left: (list_expression
        (variable)
        (variable))
      right: (tuple
        (integer)
        (integer))))
  (expression_statement
    (binary_expression
      left: (list_expression
        (subscript_expression
          (variable))
        (variable))
      right: (tuple
        (integer)
        (integer))))
  (expression_statement
    (binary_expression
      left: (list_expression
        (subscript_expression
          (variable)
          (integer))
        (subscript_expression
          (variable)))
      right: (tuple
        (integer)
        (integer))))
  (expression_statement
    (binary_expression
      left: (list_expression
        (subscript_expression
          (variable)
          (string))
        (subscript_expression
          (variable)
          (integer)))
      right: (tuple
        (integer)
        (integer))))
  (expression_statement
    (binary_expression
      left: (list_expression
        (subscript_expression
          (variable)
          (subscript_expression
            (variable)
            (string)))
        (subscript_expression
          (variable)
          (string)))
      right: (tuple
        (integer)
        (integer))))
  (expression_statement
    (binary_expression
      left: (list_expression
        (subscript_expression
          (subscript_expression
            (variable)
            (subscript_expression
              (variable)
              (string))))
        (subscript_expression
          (variable)
          (subscript_expression
            (variable)
            (string))))
      right: (tuple
        (integer)
        (integer)))))

==========================
Await
==========================

function func(): void {
  await 'await';
}

---

(script
  (function_declaration
    name: (identifier)
    (parameters)
    return_type: (type_specifier)
    body: (compound_statement
      (expression_statement
        (prefix_unary_expression
          operand: (string))))))

==========================
Binary
==========================

1 ?? 1;
1 || 1;
1 && 1;
1 | 1;
1 ^ 1;
1 & 1;
1 == 1;
1 != 1;
1 === 1;
1 !== 1;
1 < 1;
1 > 1;
1 <= 1;
1 >= 1;
1 <=> 1;
1 << 1;
1 >> 1;
1 + 1;
1 - 1;
1 . 1;
1 * 1;
1 / 1;
1 % 1;
1 ** 1;

---

(script
  (expression_statement
    (binary_expression
      left: (integer)
      right: (integer)))
  (expression_statement
    (binary_expression
      left: (integer)
      right: (integer)))
  (expression_statement
    (binary_expression
      left: (integer)
      right: (integer)))
  (expression_statement
    (binary_expression
      left: (integer)
      right: (integer)))
  (expression_statement
    (binary_expression
      left: (integer)
      right: (integer)))
  (expression_statement
    (binary_expression
      left: (integer)
      right: (integer)))
  (expression_statement
    (binary_expression
      left: (integer)
      right: (integer)))
  (expression_statement
    (binary_expression
      left: (integer)
      right: (integer)))
  (expression_statement
    (binary_expression
      left: (integer)
      right: (integer)))
  (expression_statement
    (binary_expression
      left: (integer)
      right: (integer)))
  (expression_statement
    (binary_expression
      left: (integer)
      right: (integer)))
  (expression_statement
    (binary_expression
      left: (integer)
      right: (integer)))
  (expression_statement
    (binary_expression
      left: (integer)
      right: (integer)))
  (expression_statement
    (binary_expression
      left: (integer)
      right: (integer)))
  (expression_statement
    (binary_expression
      left: (integer)
      right: (integer)))
  (expression_statement
    (binary_expression
      left: (integer)
      right: (integer)))
  (expression_statement
    (binary_expression
      left: (integer)
      right: (integer)))
  (expression_statement
    (binary_expression
      left: (integer)
      right: (integer)))
  (expression_statement
    (binary_expression
      left: (integer)
      right: (integer)))
  (expression_statement
    (binary_expression
      left: (integer)
      right: (integer)))
  (expression_statement
    (binary_expression
      left: (integer)
      right: (integer)))
  (expression_statement
    (binary_expression
      left: (integer)
      right: (integer)))
  (expression_statement
    (binary_expression
      left: (integer)
      right: (integer)))
  (expression_statement
    (binary_expression
      left: (integer)
      right: (integer))))

==========================
Binary combined
==========================

1 ??
1 ||
1 &&
1 |
1 ^
~ 1 &
1 ==
1 !=
1 ===
! 1 !==
1 <
1 >
1 <=
1 >=
1 <=>
1 <<
1 >>
+ 1 +
- 1 -
1 .
1 *
1 /
1 %
1 ** 1;

---

(script
  (expression_statement
    (binary_expression
      left: (integer)
      right: (binary_expression
        left: (binary_expression
          left: (integer)
          right: (binary_expression
            left: (integer)
            right: (integer)))
        right: (binary_expression
          left: (binary_expression
            left: (integer)
            right: (prefix_unary_expression
              operand: (integer)))
          right: (binary_expression
            left: (binary_expression
              left: (binary_expression
                left: (binary_expression
                  left: (integer)
                  right: (integer))
                right: (integer))
              right: (prefix_unary_expression
                operand: (integer)))
            right: (binary_expression
              left: (binary_expression
                left: (binary_expression
                  left: (binary_expression
                    left: (binary_expression
                      left: (integer)
                      right: (integer))
                    right: (integer))
                  right: (integer))
                right: (integer))
              right: (binary_expression
                left: (binary_expression
                  left: (integer)
                  right: (integer))
                right: (binary_expression
                  left: (binary_expression
                    left: (binary_expression
                      left: (prefix_unary_expression
                        operand: (integer))
                      right: (prefix_unary_expression
                        operand: (integer)))
                    right: (integer))
                  right: (binary_expression
                    left: (binary_expression
                      left: (binary_expression
                        left: (integer)
                        right: (integer))
                      right: (integer))
                    right: (binary_expression
                      left: (integer)
                      right: (integer))))))))))))

==========================
Binary null as
==========================

$var['key'] ?? 1 as nonnull;

$var['key'] ?? null as nonnull;

---

(script
  (expression_statement
    (binary_expression
      left: (subscript_expression
        (variable)
        (string))
      right: (as_expression
        left: (integer)
        right: (type_specifier))))
  (expression_statement
    (binary_expression
      left: (subscript_expression
        (variable)
        (string))
      right: (as_expression
        left: (null)
        right: (type_specifier)))))

==========================
Binary with strings
==========================

'??' ??
'||' ||
'&&' &&
'|' |
'^' ^
'&' &
'==' ==
'!=' !=
'===' ===
'!==' !==
'<' <
'>' >
'<=' <=
'>=' >=
'<=>' <=>
'<<' <<
'>>' >>
'+' +
'-' -
'.' .
'*' *
'/' /
'%' %
'**' ** '??';

---

(script
  (expression_statement
    (binary_expression
      left: (string)
      right: (binary_expression
        left: (binary_expression
          left: (string)
          right: (binary_expression
            left: (string)
            right: (string)))
        right: (binary_expression
          left: (binary_expression
            left: (string)
            right: (string))
          right: (binary_expression
            left: (binary_expression
              left: (binary_expression
                left: (binary_expression
                  left: (string)
                  right: (string))
                right: (string))
              right: (string))
            right: (binary_expression
              left: (binary_expression
                left: (binary_expression
                  left: (binary_expression
                    left: (binary_expression
                      left: (string)
                      right: (string))
                    right: (string))
                  right: (string))
                right: (string))
              right: (binary_expression
                left: (binary_expression
                  left: (string)
                  right: (string))
                right: (binary_expression
                  left: (binary_expression
                    left: (binary_expression
                      left: (string)
                      right: (string))
                    right: (string))
                  right: (binary_expression
                    left: (binary_expression
                      left: (binary_expression
                        left: (string)
                        right: (string))
                      right: (string))
                    right: (binary_expression
                      left: (string)
                      right: (string))))))))))))

==========================
Cast
==========================

(int)'int';
(float)'float';
(string)'string';
(array)'array';

---

(script
  (expression_statement
    (cast_expression
      value: (string)))
  (expression_statement
    (cast_expression
      value: (string)))
  (expression_statement
    (cast_expression
      value: (string)))
  (expression_statement
    (cast_expression
      value: (string))))

==========================
Clone
==========================

clone 'clone';

---

(script
  (expression_statement
    (prefix_unary_expression
      operand: (string))))

==========================
Collection
==========================

Vector {};
HH\Vector {1, 2, 3};

\HH\Map {};
Map {'foo' => 1};

Set {};
Set {'foo', 'bar'};

---

(script
  (expression_statement
    (collection
      (qualified_identifier
        (identifier))))
  (expression_statement
    (collection
      (qualified_identifier
        (identifier)
        (identifier))
      (integer)
      (integer)
      (integer)))
  (expression_statement
    (collection
      (qualified_identifier
        (identifier)
        (identifier))))
  (expression_statement
    (collection
      (qualified_identifier
        (identifier))
      (element_initializer
        (string)
        (integer))))
  (expression_statement
    (collection
      (qualified_identifier
        (identifier))))
  (expression_statement
    (collection
      (qualified_identifier
        (identifier))
      (string)
      (string))))

==========================
Comments
==========================

// a ? : / */ // + re""

/* a ? : / */ 1 + 1; // + re""

/*\
*\/ 1 + 1
*/


---

(script
  (comment)
  (comment)
  (expression_statement
    (binary_expression
      left: (integer)
      right: (integer)))
  (comment)
  (comment))

==========================
Darray
==========================

darray[];
darray[false => null, 2 => 1];

---

(script
  (expression_statement
    (array
      (array_type)))
  (expression_statement
    (array
      (array_type)
      (element_initializer
        (false)
        (null))
      (element_initializer
        (integer)
        (integer)))))

==========================
Dict
==========================

dict[];
dict[false => null, 2.3 => 1];

---

(script
  (expression_statement
    (array
      (array_type)))
  (expression_statement
    (array
      (array_type)
      (element_initializer
        (false)
        (null))
      (element_initializer
        (float)
        (integer)))))

==========================
Enum class labels
==========================

E#B;
f(#B);

---

(script
  (expression_statement
    (enum_class_label
      (qualified_identifier
        (identifier))
      (identifier)))
  (expression_statement
    (call_expression
      (qualified_identifier
        (identifier))
      (arguments
        (argument
          (enum_class_label
            (identifier)))))))

==========================
Function call
==========================

func();

func<int>(1, inout $arg, ...null);

$arg[func()]();

---

(script
  (expression_statement
    (call_expression
      function: (qualified_identifier
        (identifier))
      (arguments)))
  (expression_statement
    (call_expression
      function: (qualified_identifier
        (identifier))
      (type_arguments
        (type_specifier))
      (arguments
        (argument
          (integer))
        (argument
          (inout_modifier)
          (variable))
        (argument
          (variadic_modifier)
          (null)))))
  (expression_statement
    (call_expression
      function: (subscript_expression
        (variable)
        (call_expression
          function: (qualified_identifier
            (identifier))
          (arguments)))
      (arguments))))

==========================
Function call lambda
==========================

// (lambda (call (awaitable)))
$var = $arg ==> async { return $arg; }(1, ...vec[1,2,3]);

// (call (lambda))
$var = async $arg ==> { return $arg; }(1, ...vec[1,2,3]);

($arg ==> $arg)(func(), inout $arg);

---

(script
  (comment)
  (expression_statement
    (binary_expression
      left: (variable)
      right: (lambda_expression
        (parameters
          (parameter
            name: (variable)))
        body: (call_expression
          function: (awaitable_expression
            (compound_statement
              (return_statement
                (variable))))
          (arguments
            (argument
              (integer))
            (argument
              (variadic_modifier)
              (array
                (array_type)
                (integer)
                (integer)
                (integer))))))))
  (comment)
  (expression_statement
    (binary_expression
      left: (variable)
      right: (call_expression
        function: (lambda_expression
          (async_modifier)
          (parameters
            (parameter
              name: (variable)))
          body: (compound_statement
            (return_statement
              (variable))))
        (arguments
          (argument
            (integer))
          (argument
            (variadic_modifier)
            (array
              (array_type)
              (integer)
              (integer)
              (integer)))))))
  (expression_statement
    (call_expression
      function: (parenthesized_expression
        (lambda_expression
          (parameters
            (parameter
              name: (variable)))
          body: (variable)))
      (arguments
        (argument
          (call_expression
            function: (qualified_identifier
              (identifier))
            (arguments)))
        (argument
          (inout_modifier)
          (variable))))))

==========================
Function call pipe
==========================

$$();

func() |> $$($$);

---
